tests/fuse/core/types/annotation_unknown_error.fuse
// EXPECTED ERROR:
// error: unknown annotation `@typo`
//   --> annotation_unknown_error.fuse:5:2

@typo
fn broken() {
  println("unreachable")
}

@entrypoint
fn main() {
  broken()
}
